Clear up terminology around NAT + virtual networks

--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -2396,7 +2396,7 @@
 		      <child>
 			<widget class="GtkLabel" id="summary-forwarding">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Masquerading to default route</property>
+			  <property name="label" translatable="yes">NAT to any physical device</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
