--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -1348,7 +1348,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="net-ip4-forwarding">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">Masquerading via default route</property>
+				      <property name="label" translatable="yes">NAT to any physical device</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
