Fixed typo in network wizard

--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -1616,7 +1616,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label205">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Please indicate whether this virtual network should be connected to the phyiscal network.</property>
+		      <property name="label" translatable="yes">Please indicate whether this virtual network should be connected to the physical network.</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
