Fixes bz 235914, which is a minor grammar nit but probably valid

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -979,7 +979,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label332">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">How many virtual CPUs should this machine be allocated?</property>
+				      <property name="label" translatable="yes">How many virtual CPUs should be allocated for this machine?</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1446,7 +1446,7 @@
 				  <child>
 				    <widget class="GtkLabel" id="label59">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">How much memory should this machine be allocated?</property>
+				      <property name="label" translatable="yes">How much memory should be allocated for this machine?</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
